2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.man: More semantic markup, less visual one.

2002-10-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Updated to expect 10 messages in pop3-6.0.
	* srv.tcl: Initialize server with 10 messages. Divert log output
	  to server log. Prevents hangs in pop3-6.0.

	* pop3.tcl (pop3::retrieve): Changed conditionals around [scan] to
	  check for the actual number of conversions required to make the
	  code work, instead of < 0. This fixes bug 620062.

2002-09-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* srv.tcl: Extended to cleanup the fake maildrop directories when
	  exiting the server.

	* pop3.test: Updated to handle differences between 8.3 and 8.4
	  (different error messages). Added code to suppress logging under
	  normal circumstances. Extended to clean up the log file created
	  by the test pop3 server.

2002-09-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Added testcase 6.0, a nano-client to retrieve and
	  delete all messages on a pop server in one go. Directly derived
	  from the script for Tcllib bug #501577. Unable to reproduce that
	  bug :(
	
	* pop3.test:
	* clnt.tcl:
	* srv.tcl: Added testsuite. Incomplete. No test of 'delete'
	  command yet. The problems found by the testsuite so far were all
	  in the used pop3 server (pop3d module of tcllib).

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.man: New file, doctools manpage.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.5.1

2001-12-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.tcl (retrieve): Forgot several 'RETR $index'
	  commands. Fixed now. This is tcllib bug item #490151 reported by
	  an unknown person.

2001-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.n:
	* pop3.tcl:
	* pkgIndex.tcl: Version up to 1.5
