@@ -29,7 +29,7 @@ proc done {} {
     if {[eof stdin]} {
 	global dboxdir
 	log "shutdown through caller"
-	catch {file delete -force $dboxdir}
+	#catch {file delete -force $dboxdir}
 	exit
     }
 }
@@ -82,6 +82,31 @@ foreach m {10 20 30 40 50 60 70 80 90 100} {
     close $f
 }
 
+set    f [open [file join $dboxdir usr0 15] w]
+puts  $f {MIME-Version: 1.0
+Content-Type: text/plain;
+              charset="us-ascii"
+
+Test1
+Test2
+Test3
+Test4
+x
+
+.
+
+--
+Done}
+close $f
+
+set    f [open [file join $dboxdir usr0 16] w]
+puts  $f {MIME-Version: 1.0
+Content-Type: text/plain; charset="us-asc"
+
+y___-}
+close $f
+
+
 # Configure the authentication ...
 
 $udb add ak smash usr0
@@ -98,5 +123,5 @@ log "server up at $port"
 
 vwait forever
 log "reached infinity"
-catch {file delete -force $dboxdir}
+#catch {file delete -force $dboxdir}
 exit
